added model Class and other staff

--- a/templates/math_sample/base.html
+++ b/templates/math_sample/base.html
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#" id="subscribe">Subscribe</a>
+                    <a class="nav-link" href="#table">Lessons</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#about">About</a>
@@ -45,9 +45,14 @@
         <div class="container h-100">
             <div class="contentBox h100">
                 <div class="row">
-                    <div class="col-lg-12"><h1> About us</h1></div>
+                    <div class="col-lg-12"><h1 id="aboutusSection"> About us</h1></div>
                     <div class="col-lg-12"><p>Researchers in mathematics education are primarily concerned with the tools, methods and approaches that facilitate practice or the study of practice; however, mathematics education research, known on the continent of Europe as the didactics or pedagogy of mathematics, has developed into an extensive field of study, with its own concepts, theories, methods, national and international organisations, conferences and literature.
                         This article describes some of the history, influences and recent controversies.</p></div>
+                    <div class="col-lg-12">
+                        <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" class="fa fa-facebook"></a>
+                        <a href="https://twitter.com/home?status=I'm%20going%20to%20learn%20to%20Code...%20Come%20build%20an%20web%20apsp%20with%20me!%20%23CFE%20and%20@justinmitchel%20{{ request.build_absolute_uri }}" class="fa fa-twitter"></a>
+                        <a href='https://plus.google.com/share?url={{ request.build_absolute_uri }}' class="fa fa-google-plus"></a>
+                    </div>
                 </div>
             </div>
         </div>
