--- a/math_sample/static/css/base.css
+++ b/math_sample/static/css/base.css
@@ -40,6 +40,14 @@
 
 .section1 {
     position: relative;
+    background: #000000;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+
+.section2 {
+    position: relative;
     background: url(../images/aboutUs.jpg);
     background-size: cover;
     width: 100%;
@@ -74,6 +82,11 @@
 .section2{
     background-color: black;
 }
+
+#aboutusSection{
+    margin-top: 180px;
+}
+
 .tableSec{
     margin-top: 50px;
     font-weight: 800;
@@ -85,7 +98,8 @@
 
 
 
-.section1:before {
+.section1:before,
+.section2:before{
 	content: '';
 	position: absolute;
 	top: 0;
