Changed of description

--- a/templates/math_sample/base.html
+++ b/templates/math_sample/base.html
@@ -46,8 +46,18 @@
             <div class="contentBox h100">
                 <div class="row">
                     <div class="col-lg-12"><h1 id="aboutusSection"> About us</h1></div>
-                    <div class="col-lg-12"><p>Researchers in mathematics education are primarily concerned with the tools, methods and approaches that facilitate practice or the study of practice; however, mathematics education research, known on the continent of Europe as the didactics or pedagogy of mathematics, has developed into an extensive field of study, with its own concepts, theories, methods, national and international organisations, conferences and literature.
-                        This article describes some of the history, influences and recent controversies.</p></div>
+                    <div class="col-lg-12"><p>
+
+                        We are two programmers (Pavlo Golovachov and Vlad Shatalyuk) who strive for the development of society.
+                        We are completely open to the new and therefore everything on the website is free.
+
+                        The most important thing: Train on tasks every day and the result will be sure!
+                        Learn and train: you and your children will have a good future!
+
+                        Respectfully,
+                        Pavlo & Vlad
+
+                    </p></div>
                     <div class="col-lg-12">
                         <a href="https://www.facebook.com/sharer/sharer.php?u={{ request.build_absolute_uri }}" class="fa fa-facebook"></a>
                         <a href="https://twitter.com/home?status=I'm%20going%20to%20learn%20to%20Code...%20Come%20build%20an%20web%20apsp%20with%20me!%20%23CFE%20and%20@justinmitchel%20{{ request.build_absolute_uri }}" class="fa fa-twitter"></a>
