added donate button

--- a/math_sample/static/css/index.css
+++ b/math_sample/static/css/index.css
@@ -342,6 +342,12 @@ body {
 	font-weight: 400;
 	margin-top: 90px;
 }
+
+.about-us form {
+	text-align: center;
+	margin-top: 50px;
+}
+
 .about-us .social{
 	margin-top: 90px;
 }
