--- a/templates/math_sample/index.html
+++ b/templates/math_sample/index.html
@@ -100,20 +100,23 @@
                         Respectfully,
                         Pavlo & Vlad
 				<br><br>Researches in mathematics education are primarily concerned with the tools, methods and approaches that facilitate practice or the study of practice; however, mathematics education research, known on the continent of Europe as the didactics or pedagogy of mathematics, has developed into an extensive field of study, with its own concepts, theories, methods, national and international organisations, conferences and literature. This article describes some of the history, influences and recent controversies.
-
-                <form class="text-center" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                    <input type="hidden" name="cmd" value="_s-xclick" >
-                    <input type="hidden" name="hosted_button_id" value="P7VHUW943PDEE">
-                    <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
-                    <img alt="" border="0" src="https://www.paypal.com/en_UA/i/scr/pixel.gif" width="5" height="5" >
-                </form>
             </p>
+
+            <form  action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_s-xclick" >
+                <input type="hidden" name="hosted_button_id" value="P7VHUW943PDEE">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
+                <img alt="" border="0" src="https://www.paypal.com/en_UA/i/scr/pixel.gif" width="5" height="5" >
+            </form>
+
 			<div class="social">
+
 				<a class="social-icon social-icon-facebook" href="#"></a>
 				<a class="social-icon social-icon-twitter" href="#"></a>
 				<a class="social-icon social-icon-linkedin" href="#"></a>
 				<a class="social-icon social-icon-googleplus" href="#"></a>
 			</div>
+
 		</div>
 	</div>
 	<div class="big-block bottom"></div>
