--- a/templates/math_sample/index.html
+++ b/templates/math_sample/index.html
@@ -42,8 +42,13 @@
 				</div>
 			</div>
             {% endfor %}
-
 		</div>
+        <form  action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+            <input type="hidden" name="cmd" value="_s-xclick" >
+            <input type="hidden" name="hosted_button_id" value="P7VHUW943PDEE">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" width="150" height="60" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
+            <img alt="" border="0" src="https://www.paypal.com/en_UA/i/scr/pixel.gif" width="1" height="1" >
+        </form>
 	</div>
 	<div class="big-block traine" id="trainer">
 		<div class="block">
@@ -53,7 +58,7 @@
 					<div class="calc-number">1</div>
 					<div class="calc-number">2</div>
 					<div class="calc-number">3</div>
-					<div class="calc-number">4</div>
+					<div class="calc-number"><a href="#">4</a></div>
 					<div class="calc-number">5</div>
 					<div class="calc-number">6</div>
 					<div class="calc-number">7</div>
@@ -101,13 +106,6 @@
                         Pavlo & Vlad
 				<br><br>Researches in mathematics education are primarily concerned with the tools, methods and approaches that facilitate practice or the study of practice; however, mathematics education research, known on the continent of Europe as the didactics or pedagogy of mathematics, has developed into an extensive field of study, with its own concepts, theories, methods, national and international organisations, conferences and literature. This article describes some of the history, influences and recent controversies.
             </p>
-
-            <form  action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                <input type="hidden" name="cmd" value="_s-xclick" >
-                <input type="hidden" name="hosted_button_id" value="P7VHUW943PDEE">
-                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button">
-                <img alt="" border="0" src="https://www.paypal.com/en_UA/i/scr/pixel.gif" width="5" height="5" >
-            </form>
 
 			<div class="social">
 
